# braindump

./: CLAUDE.md  LICENSE  README.md  index.html  install.sh  package.json  quick-capture.html  vite.config.ts
.github/workflows/: release.yml
scripts/: tauri.mjs
src/: App.tsx  QuickCapture.tsx  index.css  main.tsx  quick-capture-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_topic.sql  003_add_position.sql  004_soft_delete.sql  005_draft_unique.sql
src-tauri/src/: agent.rs  lib.rs  main.rs  screenshot.rs  setup.rs
src/components/: CaptureAmbient.tsx  DevBadge.tsx  Editable.tsx  EpisodePicker.tsx  Logo.tsx  NTSPlayer.tsx  ProcessingView.tsx  ScreenshotStudio.tsx  SettingsPopover.tsx  SetupWizard.tsx  YouTubePlayer.tsx
src/components/ui/: button.tsx
src/lib/: agent.ts  db.ts  screenshot.ts  settings.ts  setup.ts  updater.ts
