[package]
name = "braindump"
version = "1.5.1"
description = "Quick capture, agent-organized."
authors = ["James-W-Berry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "braindump_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Renames the dev binary so the macOS Dock tooltip reads "BRAINDUMP" instead
# of the lowercase package name. Production `.app` bundles already use
# productName from tauri.conf.json.
[[bin]]
name = "BRAINDUMP"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "fs", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
dirs = "5"
hex = "0.4"
base64 = "0.22"
tauri-plugin-http = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSResponder", "NSScreen"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

